profile start done with catalogue for now

--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,12 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Atomic+Age&family=Inter:wght@200&display=swap" rel="stylesheet">
-  <title>Okami Anime</title>
+  <title>ŌkamiAnime</title>
 </head>
 
 <body>
   <div id="root"></div>
-
 </body>
+<!-- Front-end by YungShadi, Back-end by Kensex. With love <3 -->
 
 </html>
