tuda suda manifest captcha

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Atomic+Age&family=Inter:wght@200&display=swap" rel="stylesheet">
+  <link rel="manifest" href="./manifest.json">
   <title>ŌkamiAnime</title>
 </head>
 
@@ -16,4 +17,5 @@
   <script type="module" src="/src/index.tsx"></script>
 </body>
 <!-- Front-end by YungShadi, Back-end by Kensex. With love <3 -->
+
 </html>
