api upd and more

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
   <link href="https://fonts.googleapis.com/css2?family=Atomic+Age&family=Inter:wght@200&display=swap" rel="stylesheet">
   <link rel="manifest" href="./manifest.json">
   <title>ŌkamiAnime</title>
+  <meta name="description"
+    content="Добро пожаловать на OkamiAnime - ваш идеальный онлайн-источник для бесплатного просмотра аниме! Наш виртуальный анимационный мир предлагает вам богатый выбор захватывающих аниме-сериалов и фильмов, доступных для просмотра в любое время. OkamiAnime предоставляет широкий спектр жанров, начиная от захватывающих приключений и фэнтези до трогательных романтических историй, чтобы удовлетворить вкусы каждого любителя аниме.">
+  <meta name="author" content="YungShadi">
+  <meta name="keywords"
+    content="аниме, смотреть аниме, смотреть бесплатно, anime, watch anime, okami, okamianime, okami-anime, бесплатное аниме, анимационные сериалы, аниме фильмы, приключения, фэнтези, романтика, аниме каталог, высокое качество, субтитры">
+
 </head>
 
 <body>
