some updates, pagination, skeleton, style

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Atomic+Age&family=Inter:wght@200&display=swap" rel="stylesheet">
-  <link rel="manifest" href="./manifest.json">
+  <link rel="manifest" href="./public//manifest.json">
   <title>ŌkamiAnime</title>
   <meta name="description"
     content="Добро пожаловать на OkamiAnime - ваш идеальный онлайн-источник для бесплатного просмотра аниме! Наш виртуальный анимационный мир предлагает вам богатый выбор захватывающих аниме-сериалов и фильмов, доступных для просмотра в любое время. OkamiAnime предоставляет широкий спектр жанров, начиная от захватывающих приключений и фэнтези до трогательных романтических историй, чтобы удовлетворить вкусы каждого любителя аниме.">
