posters and started rebuild mobile menu

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="manifest" href="./public/manifest.json">
   <title>ŌkamiAnime</title>
   <meta name="description"
-    content="Добро пожаловать на OkamiAnime - ваш идеальный онлайн-источник для бесплатного просмотра аниме! Наш виртуальный анимационный мир предлагает вам богатый выбор захватывающих аниме-сериалов и фильмов, доступных для просмотра в любое время. OkamiAnime предоставляет широкий спектр жанров, начиная от захватывающих приключений и фэнтези до трогательных романтических историй, чтобы удовлетворить вкусы каждого любителя аниме.">
+    content="Ваш источник увлекательных аниме! Смотрите бесплатно лучшие аниме онлайн на нашем сайте. Огромная коллекция анимационных шедевров!">
   <meta name="author" content="YungShadi">
   <meta name="keywords"
     content="аниме, смотреть аниме, смотреть бесплатно, anime, watch anime, okami, okamianime, okami-anime, бесплатное аниме, анимационные сериалы, аниме фильмы, приключения, фэнтези, романтика, аниме каталог, высокое качество, субтитры">
